--- a/css/style.scss
+++ b/css/style.scss
@@ -14,13 +14,13 @@ $darkred: #9d1a2d;
 $gray0: #f9f8f6;
 
 
-@media (min-width: 550px){
+@media (min-width: 960px){
     .sp{
         display: none;
     }
 }
 
-@media (max-width: 550px){
+@media (max-width: 960px){
     .pc{
         display: none;
     }
@@ -34,20 +34,54 @@ body{
 }
 
 header{
+  @media(min-width: 960px){
+    padding-bottom: 20px;
+    padding-top: 1.9rem;
+    vertical-align: bottom;
+  }
+  
     .logo{
-        padding-top: 10px;
+      //border: 1px solid black;
+      
+        padding-top: 17px;
+        padding-bottom: 7px;
         text-align: center;
         
-        @media(min-width: 550px){
-            text-align: left;
+        img{
+            width: 12rem;
         }
         
-        img{
-            width: 40%;
+        @media(min-width: 960px){
+            padding-top: 10px;
+            text-align: left;
+            float: left;
+            
+            img{
+                width: 70%;
+            }
         }
+        
+        
     }
     
     .header_navi{
+      //border: 1px solid black;
+        padding-bottom: 6px;
+          
+        @media(min-width: 960px){
+            
+            text-align: right;
+            padding-top: 2.4rem;
+            padding-bottom: 0;
+            float: right;
+            
+            img{
+                vertical-align: bottom;
+                cursor: pointer;
+            }
+            
+        }
+        
         .icons{
             text-align: center;
             
@@ -55,12 +89,12 @@ header{
                 margin: 0 0.45rem;
                 text-align: center;
                 
-                @media(min-width: 550px){
+                @media(min-width: 960px){
                     text-align: right;
                     display: inline-block;
                     
                     margin-right: 0;
-                    margin-left: 0.8rem;
+                    margin-left: 0.6rem;
                     
                     &.sp{
                         display: none;
@@ -69,7 +103,7 @@ header{
             }
         }
         
-        @media (min-width: 550px){
+        @media (min-width: 960px){
             .headernavi_li{
                 padding-right: 0.6rem;
                 padding-left: 0.6rem;
@@ -77,7 +111,7 @@ header{
         }    
     }
     
-    @media (min-width: 550px){
+    @media (min-width: 960px){
         .logo{
             text-align: left;
         }
@@ -98,11 +132,21 @@ header{
         }
     }
 }
+#main{
+    @media(max-width: 959px){
+        //clear: left;
+    }
+}
 
 #new_items, #popular_items{
     .title{
         text-align: center;
         padding: 0.8rem 0;
+        
+        @media(min-width: 960px){
+            padding: 1.5rem 0;
+        }
+        
     }
     
     .flex_row{
@@ -113,14 +157,16 @@ header{
         .item{
             background: white;
             
-            width: 44%;
-            padding: 0.8rem;
+            width: 49.6%; //44%;
+            padding: 0; //0.8rem;
+            
             margin-bottom: 0.2rem;
             
-            @media(min-width: 550px){
-                width: 30%;
-                padding: 0.8rem;
-                margin-bottom: 0.4rem;
+            img{
+                margin-top: 8px;
+                padding-left: 8px;
+                width: calc(100% - 8px);
+                text-align: center;
             }
             
             p{
@@ -128,6 +174,27 @@ header{
                 font-family: $font;
                 
                 margin-bottom: 0.6rem;
+                padding: 0 8px;
+            }
+        }
+        
+        @media(min-width: 960px){
+            .item{
+                width: 33%;
+                padding: 0rem;
+                padding-bottom: 10px;
+                margin-bottom: 0.4rem;
+                
+                img{
+                    margin-top: 15px;
+                    padding-left: 15px;
+                    width: calc(100% - 15px);
+                    text-align: center;
+                }
+                p{
+                    padding: 0 15px;
+                    margin-bottom: 10px;
+                }
             }
         }
     }
@@ -139,6 +206,10 @@ header{
     .title{
         text-align: center;
         padding: 0.8rem 0;
+        
+        @media(min-width: 960px){
+            padding: 1.5rem 0;
+        }
     }
     
     .flex_row{
@@ -174,21 +245,28 @@ header{
                 margin: 0;
             }
             
-            @media(min-width: 550px){
-            width: 42.5%;
+            @media(min-width: 960px){
+                @include box-sizing(border-box);
+                width: 49.5%;
             }
         }
         
-        @media(min-width: 550px){
+        @media(min-width: 960px){
             @include display-flex();
             @include justify-content(space-between);
         }
+        
     }
 
 }
 
-#sidebar{
+#sidebar,.sidebar{
     padding: 0 0.2rem;
+    
+    @media(max-width: 959px){
+        //clear: left;
+        width: 100%;
+    }
     
     #item_search{
         background: white;
@@ -207,12 +285,17 @@ header{
                 float: left;
                 line-height: 3.0rem;
                 padding-left: 1.4rem;
+                font-style: italic;
             }
             
             img{
                 float: right;
                 padding: 0.7rem 0.7rem;
             }
+        }
+        @media(min-width: 960px){
+            padding: 1.0rem 1.8rem 1.8rem 1.8rem;
+            margin-bottom: 1.0rem;
         }
     }
     
@@ -224,7 +307,7 @@ header{
         }
         
         .links_title{
-            height: 4.5rem;
+            height: 4.2rem;
             
             background: $gray3;
             cursor: pointer;
@@ -233,7 +316,7 @@ header{
             padding-right: 1.0rem;
             
             img{
-                margin-top: 1.8rem;
+                margin-top: 1.5rem;
                 //margin-left: 1.5rem;
             }
             
@@ -242,19 +325,28 @@ header{
                 //margin-right: 1.0rem
                 float: right;
             }
+            
+            .down_icon{
+                margin-top: 1.8rem;
+                //margin-right: 1.0rem
+                float: right;
+                
+                display: none;
+            }
 
         }
         .links_li{
             margin-bottom: 0;
             
             li{
-                height: 4.5rem;
+                height: 4.2rem;
                 background: white;
-                margin-bottom: 0.2rem;
+                margin-bottom: 0.1rem;
                 padding-left: 1.6rem;
                 
                 list-style: none;
-                line-height: 4.5rem;
+                line-height: 4.2rem;
+                cursor: pointer;
                 
                 .next_icon{
                     float: right;
@@ -268,14 +360,20 @@ header{
     #categories{
         padding-bottom: 1.0rem;
         
+        .toggle{
+            display: none;
+        }
+        
         .categories_title{
-            height: 4.5rem;
+            height: 4.2rem;
             
             background: $gray3;
             
 
             padding-left: 1.5rem;
             padding-right: 1.0rem;
+            
+            cursor: pointer;
             
             img{
                 margin-top: 1.8rem;
@@ -287,19 +385,32 @@ header{
                 //margin-right: 1.0rem
                 float: right;
             }
+            
+            .down_icon{
+                margin-top: 1.8rem;
+                //margin-right: 1.0rem
+                float: right;
+                
+                display: none;
+            }
 
         }
         .categories_li{
             margin-bottom: 0;
             
+            a{
+                text-decoration: none;
+                color: black;
+            }
+            
             li{
-                height: 4.5rem;
+                height: 4.2rem;
                 background: white;
                 margin-bottom: 0.2rem;
                 padding-left: 1.6rem;
                 
                 list-style: none;
-                line-height: 4.5rem;
+                line-height: 4.2rem;
                 
                 .next_icon{
                     float: right;
@@ -314,7 +425,7 @@ header{
         padding-bottom: 1.2rem;
         
         .about_title{
-            height: 4.5rem;
+            height: 4.2rem;
             
             background: $gray3;
             
@@ -334,6 +445,8 @@ header{
                 padding-top: 0.4rem;
                 padding-right: 0.8rem;
                 padding-bottom: 1.0rem;
+                
+                
             }
             
             .about_text{
@@ -343,7 +456,22 @@ header{
                     padding-bottom: 1.0rem;
                     margin: 0;
                 }
+            }
+            
+            @media(min-width: 960px){
+                padding: 1.2rem;
                 
+                .about_image{
+                    width: 100%;
+                    padding: 0;
+                    padding-bottom: 0.8rem;
+                }
+                
+                .more_btn{
+                    text-align: center;
+                    padding-top: 3px;
+                    cursor: pointer;
+                }
             }
         }
     }
@@ -352,7 +480,7 @@ header{
         padding-bottom: 1.2rem;
         
         .shopinfo_title{
-            height: 4.5rem;
+            height: 4.2rem;
             
             background: $gray3;
             
@@ -383,6 +511,21 @@ header{
                 }
                 
             }
+            @media(min-width: 960px){
+                padding: 1.2rem;
+                
+                .shopinfo_image{
+                    width: 100%;
+                    padding: 0;
+                    padding-bottom: 0.8rem;
+                }
+                
+                .more_btn{
+                    text-align: center;
+                    padding-top: 3px;
+                    cursor: pointer;
+                }
+            }
         }
     }
 }
@@ -391,6 +534,12 @@ footer{
     .pagetop_btn{
         text-align: center;
         padding-bottom: 2.0rem;
+        
+        @media(min-width: 960px){
+            text-align: right;
+            padding-bottom: 1.2rem;
+            padding-top: 2.0rem;
+        }
     }
     
     .hr{
@@ -412,6 +561,16 @@ footer{
             padding: 0 0.2rem;
             margin-bottom: 0.4rem;
         }
+        
+        @media(min-width: 960px){
+            padding-top: 18px;
+            padding-bottom: 8px;
+            
+            li{
+                padding: 0 0.6rem;
+                cursor: pointer;
+            }
+        }
     }
     
     .copy{
@@ -423,4 +582,412 @@ footer{
     }
 }
 
+//list.html
 
+.site_map{
+    background: $gray1;
+    margin-bottom: 10px;
+    @include border-radius(3px);
+    padding-left: 10px;
+    
+    img,p{
+        display: inline-block;
+        color: $gray3;
+        line-height: 35px;
+        margin-bottom: 0;
+        font-size: 11px;
+        margin: 0 3px;
+    }
+}
+
+#cover{
+    padding-bottom: 5px;
+    width: 100%;
+    
+    .cover_image{
+        img{
+            width: 100%;
+        }
+    }
+}
+
+#list_items, #recent_items{
+    
+    
+    
+    .title{
+        text-align: center;
+        padding: 0.8rem 0;
+        
+        @media(min-width: 960px){
+            padding: 1.5rem 0;
+        }
+        
+    }
+    
+    .flex_row{
+        @include display-flex();
+        @include flex-wrap(wrap);
+        @include justify-content(space-between);
+        
+        .item{
+            background: white;
+            
+            width: 49.6%; //44%;
+            padding: 0; //0.8rem;
+            
+            margin-bottom: 0.2rem;
+            
+            img{
+                margin-top: 8px;
+                padding-left: 8px;
+                width: calc(100% - 8px);
+                text-align: center;
+            }
+            
+            p{
+                font-size: 1.1rem;
+                font-family: $font;
+                
+                margin-bottom: 0.6rem;
+                padding: 0 8px;
+            }
+        }
+        
+        @media(min-width: 960px){
+            .item{
+                width: 33%;
+                padding: 0rem;
+                padding-bottom: 10px;
+                margin-bottom: 0.4rem;
+                
+                img{
+                    margin-top: 15px;
+                    padding-left: 15px;
+                    width: calc(100% - 15px);
+                    text-align: center;
+                }
+                
+                p{
+                padding: 0 15px;
+                margin-bottom: 10px;
+                }
+            }
+            
+        }
+    }
+    
+    .back_next_btn_area{
+        padding-top: 20px;
+        padding-bottom: 15px;
+        
+        @include display-flex();
+        @include justify-content(space-between);
+        
+        .back_btn,.next_btn{
+            padding: 10px 38px;
+            
+            background: $gray3;
+            color: white;
+            font-weight: bold;
+            font-size: 11px;
+            
+            cursor: pointer;
+        }
+        
+        @media(min-width: 960px){
+            padding-top: 15px;
+            padding-bottom: 10px;
+        }
+    }
+}
+
+//product.html
+
+
+
+.detail_container{
+    @media(max-width: 960px){
+        padding: 0;
+    }
+}
+
+#product_detail{
+    background-color: white;
+    //border: 1px solid black;
+    
+    padding: 40px 60px;
+    
+    @media(max-width: 960px){
+        @include box-sizing(border-box);
+        width: 100%;
+        padding: 20px 20px;
+    }    
+    
+    h2{
+        font-size: 14px;
+        font-weight: bold;
+        float: left;
+    }
+    
+    p{
+        font-size: 10px;
+        color: $gray3;
+        float: right;
+        
+        line-height: 14px;
+        vertical-align: bottom;
+    }
+    
+    .pro_images{
+        clear: both;
+        padding-bottom: 15px;
+        
+        
+        .big_proimage{
+            float: left;
+            width: 70%;
+            
+            @media(max-width: 960px){
+                width: 100%;
+            }
+        }
+        
+        .flex_row{
+            width: 30%;
+            float: right;
+            //border: 1px solid black;
+            
+            @media(max-width: 960px){
+                width: 100%;
+            }
+            
+            @include display-flex();
+            @include flex-wrap(wrap);
+            @include justify-content(space-between);
+            
+            
+            .product{
+                padding-bottom: 1.7%;
+                padding-left: 8%;
+                width: 42%;
+                //height: 15%;
+                //border: 1px solid black;
+                
+                @media(max-width: 960px){
+                    width: 18%;
+                    padding-bottom: 0;
+                    padding-left: 0;
+                }
+            }
+        }
+
+        
+    }
+    
+    .color_size{
+        clear: both;
+        padding-top: 10px;
+        border-top: 1px solid $gray1;
+        
+        img{
+            padding: 10px 0;
+        }
+        
+        table{
+            width: 100%;
+            border-collapse: collapse;
+            
+            .table_gray,th{
+                background: $gray0;
+            }
+            
+            th{
+                width: 30%;
+            }
+            
+            td{
+                width: 35%;
+            }
+            
+            th,td{
+                text-align: center;
+                color: $gray3;
+                font-weight: normal;
+                border: 1px solid $gray1;
+            }
+            
+        }
+        
+    }
+    
+    .price_quantity{
+        float: left;
+        width: 52%;
+        margin-left: 0;
+        //border: 1px solid $gray2;
+        
+        @media(max-width: 960px){
+            width: 100%;
+            clear: left;
+        }
+
+        
+        .price{
+            border-top: 1px solid $gray1;
+            padding: 18px 0;
+            //width: 55%;
+            margin-right: 0;
+            
+            img{
+                float: left;
+                margin-right: 70px;
+                margin-top: 7px;
+            }
+            
+            h3{
+                font-size: 14px;
+                font-style: italic;
+                line-height: 24px;
+                margin-bottom: 0;
+                
+                span{
+                    color: #e80f66;
+                    
+                    .price_number{
+                        font-size: 24px;
+                    }
+                }
+            }
+        }
+        
+        .quantity{
+            border-top: 1px solid $gray1;
+            border-bottom: 1px solid $gray1;
+            padding: 12px 0;
+            margin-right: 0;
+            margin-bottom: 15px;
+            height: 30px;
+            
+            img{
+                float: left;
+                margin-right: 50px;
+                margin-top: 11px;
+            }
+            
+            .blank{
+                width: 40%;
+                height: 30px;
+                border: 1px solid $gray1;
+                display: inline-block;
+            }
+        }    
+    }
+    
+    .cart_btn{
+        @media(min-width: 960px){
+            float: right;
+        }
+        
+        margin-bottom: 60px;
+        cursor: pointer;
+        
+        @media(max-width: 960px){
+            //border: 1px solid black;
+            text-align: center;
+            margin-bottom: 0;
+        }
+
+    }
+    
+    .pro_text_area{
+        clear: both;
+        
+        border-top: 1px solid $gray1;
+        
+        padding-bottom: 15px;
+        
+        @media(max-width: 960px){
+            border-top: none;
+            padding-bottom: 0;
+        }
+        
+        h2{
+            color: $gray3;
+            font-size: 16px;
+            line-height: 24px;
+            padding-top: 30px;
+            padding-bottom: 15px;
+            display: block;
+            
+            width: 100%;
+            border-bottom: 1px solid $gray3;
+            
+            @media(max-width: 960px){
+                padding-top: 20px;
+                
+            }
+        }
+        
+        h3{
+            color: $gray3;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 20px 0;
+            margin-bottom: 0;
+        }
+        
+        p{
+            font-size: 14px;
+            line-height: 20px;
+            color: black;
+        }
+        
+        table{
+            width: 100%;
+            
+            
+            @media(max-width: 960px){
+                margin-bottom: 10px;
+            }
+            
+            th{
+                width: 30%;
+                text-align: center;
+                background: $gray0;
+            }
+            
+            td{
+                width: 70%;
+                padding-left: 15px;
+            }
+            
+            th,td{
+                font-size: 12px;
+                line-height: 17px;
+                color: $gray3;
+                padding: 15px 10px;
+                border: 1px solid $gray1;
+            }
+        }
+    }
+    
+    
+}
+.gp{    //gray_padding
+        @media(max-width: 960px){
+            padding-right: 20px;
+            padding-left: 20px;
+    }
+}
+
+.gm{    //gray_padding
+        @media(max-width: 960px){
+            margin-right: 20px;
+            margin-left: 20px;
+    }
+}
+
+.pointer{
+    cursor: pointer;
+}
